# clean

./: .flake8  .gitignore  .travis.yml  LICENSE  README.md  clean.bat  clean.py  clean.sh  setup.cfg  setup.py
.config/: pep8
clean/: add.py  cli.py  config.py  cwd.py  delete.py  list.py  move.py
clean/updates/: updator.py
clean/updates/versions/: __init__.py  v0_1_1.py  version.py
tests/: .cleanrc  .cleanrc.bk  test_cli.py  test_config.py
