[metadata]
name = clean
version = 0.1.4
url = https://github.com/HibikineKage/clean
author = Hibikine Kage
author_email = goodsmile314159@gmail.com
license = MIT
description = clean: Command line file sorter(mover)
long_description = file: README.md
py_modules = clean
install_requires = Click
classfiers =
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Intended Audience :: Developers
  Topic :: System :: Filesystems
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Development Status :: 4 - Beta

[options]
packages = find:
entry_points = file: entry_points.cfg
data_files =
